--- a/src/content/posts/1.md
+++ b/src/content/posts/1.md
@@ -1,114 +1,144 @@
 ---
-pubDate: 2024-01-01
-author: Alejandro Martinez
-title: Because the universe needed a framework
-description: "Embark on a cosmic journey with astro.js, the framework that makes interstellar development a breeze. Pair it with Tailwind CSS for a design that's out of this world"
+pubDate: 2025-01-07
+author: Samridha
+title: Software Testing Basics
+description: "Explore the fundamentals of software testing, including types, techniques, planning, and defect lifecycle, designed for beginners and professionals alike."
 image:
   url: "https://images.unsplash.com/photo-1618580747643-7ecc7240ba4e?q=80&w=2787&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-  alt: "#"
-tags: ["HTML", "Tailwind"]
+  alt: "Software Testing Illustration"
+tags: ["Software Testing", "QA", "SDET"]
 ---
 
-Here is a sample of some basic Markdown syntax that can be used when writing Markdown content in Astro.
+## Types of Software Testing
 
-## Headings
+### Unit Testing
+Unit testing involves testing individual functions or modules to ensure they work independently. It is always automated.
 
-The following HTML `<h1>`—`<h6>` elements represent six levels of section headings. `<h1>` is the highest section level while `<h6>` is the lowest.
+### Integration Testing
+Integration testing ensures that two or more modules work as expected in coordination. It verifies that communication and data flow are functioning correctly.
 
-# H1
+### Regression Testing
+Regression testing ensures recent code changes (e.g., new features or bug fixes) do not negatively impact the application, maintaining stability during development.
 
-## H2
+### Smoke Testing
+Smoke testing is a quick test (usually 7-10 minutes) to ensure core functionalities are working in the application. It is often performed prior to regression testing or post-deployment.
 
-### H3
+### Sanity Testing
+Sanity testing verifies whether a feature or bug fix is working as expected.
 
-#### H4
+### User Acceptance Testing (UAT)
+UAT is the final stage in the Software Development Lifecycle (SDLC), where the application is tested to ensure it meets customer requirements. It is typically conducted by the client.
 
-##### H5
+#### Difference Between Smoke and Sanity Testing:
+- **Smoke**: Focuses on stability.
+- **Sanity**: Focuses on the functionality of specific features (very narrow scope).
 
-###### H6
+---
 
-## Paragraph
+## Manual vs. Automated Testing
 
-Xerum, quo qui aut unt expliquam qui dolut labo. Aque venitatiusda cum, voluptionse latur sitiae dolessi aut parist aut dollo enim qui voluptate ma dolestendit peritin re plis aut quas inctum laceat est volestemque commosa as cus endigna tectur, offic to cor sequas etum rerum idem sintibus eiur? Quianimin porecus evelectur, cum que nis nust voloribus ratem aut omnimi, sitatur? Quiatem. Nam, omnis sum am facea corem alique molestrunt et eos evelece arcillit ut aut eos eos nus, sin conecerem erum fuga. Ri oditatquam, ad quibus unda veliamenimin cusam et facea ipsamus es exerum sitate dolores editium rerore eost, temped molorro ratiae volorro te reribus dolorer sperchicium faceata tiustia prat.
+### Manual Testing
+Testing that requires human intelligence and observation to find bugs. It is performed by a human tester and is more suitable for exploratory and user acceptance testing. It is ideal in the early stages of development when automation may be expensive.
 
-Itatur? Quiatae cullecum rem ent aut odis in re eossequodi nonsequ idebis ne sapicia is sinveli squiatum, core et que aut hariosam ex eat.
+### Automated Testing
+Automated testing uses scripts and tools to validate the application. Tools like Selenium, Cypress, and TestNG are commonly used. It is faster, more efficient, and more reliable for repetitive tasks. It requires a higher initial investment but is worthwhile for large-scale projects with frequent updates.
 
+---
 
+## Black-Box, White-Box, and Gray-Box Testing
 
-## Images
+### Black-Box Testing
+Testing without any knowledge of the internal structure, code, or implementation. Focuses only on inputs and outputs. Examples include acceptance testing and UI testing.
 
-![This is a placeholder image description](https://images.unsplash.com/photo-1618580747643-7ecc7240ba4e?q=80&w=2787&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D)
+### White-Box Testing
+Testing with full knowledge of the internal structure, code, or implementation. Test cases are designed using code and focus on code coverage (e.g., path, branch, or statement). Performed by testers with programming knowledge.
 
-## Blockquotes
+### Gray-Box Testing
+Testing with partial internal knowledge of the code. Integration testing can be considered gray-box testing.
 
-The blockquote element represents content that is quoted from another source, optionally with a citation which must be within a `footer` or `cite` element, and optionally with in-line changes such as annotations and abbreviations.
+---
 
-#### Blockquote without attribution
+## Test Planning
 
-> Tiam, ad mint andaepu dandae nostion secatur sequo quae.
-> **Note** that you can use _Markdown syntax_ within a blockquote.
+### Writing Test Plans, Test Cases, and Test Scripts
 
-#### Blockquote with attribution
+#### Test Plan
+Defines the approach, objective, scope, resources, and schedule of testing.
 
-> Don't communicate by sharing memory, share memory by communicating.<br>
-> — <cite>Rob Pike[^1]</cite>
+**Sections of a Test Plan**:
+1. **Introduction**: Objective (e.g., finding bugs, validating features), approach.
+2. **Definitions and Scope**: Business-specific terminologies, features in/out of scope.
+3. **Functionality**: Detailed breakdown of functional and non-functional requirements.
 
-[^1]: The above quote is excerpted from Rob Pike's [talk](https://www.youtube.com/watch?v=PAAkCSZUG1c) during Gopherfest, November 18, 2015.
+**Other Components**:
+- Roles and responsibilities
+- Testing environments
+- Resources, deliverables, and schedule
 
-## Tables
+#### Test Case
+A set of conditions and instructions to validate a feature or functionality. It usually includes prerequisites, test steps, test data, validation conditions, and pass conditions.
 
-| Italics   | Bold     | Code   |
-| --------- | -------- | ------ |
-| _italics_ | **bold** | `code` |
+#### Test Script
+Programmatically written instructions to automate a test case.
 
-## Code Blocks
+---
 
-```html
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Example HTML5 Document</title>
-  </head>
-  <body>
-    <p>Test</p>
-  </body>
-</html>
-```
+## Defect Life Cycle and Bug Reporting
 
-## List Types
+### Defect Life Cycle
+The stages a bug goes through from identification to closure.
 
-#### Ordered List
+1. **New**: When identified by the tester.
+2. **Assigned**: When acknowledged by the development team.
+3. **Open**: When the development team starts working on it.
+4. **Fixed**: After patching, the development marks it fixed.
+5. **Retest**: When the bug reaches the test team for verification.
+6. **Verified**: When the fix works as expected.
+7. **Closed**: When the bug is resolved with no further issues.
 
-1. First item
-2. Second item
-3. Third item
+Additional stages:
+- **Deferred**: Bug postponed for future releases.
+- **Rejected**: Bug deemed invalid.
+- **Reopened**: Bug not fixed correctly.
 
-#### Unordered List
+### Bug Reporting
 
-- List item
-- Another item
-- And another item
+**Contents of a Bug Report**:
+- Preconditions
+- Steps to reproduce the bug
+- Test data
+- Priority (low, medium, high, critical)
+- Severity (minor, major, critical, broken)
+- Supporting photos/videos for reproduction
 
-#### Nested list
+---
 
-- Fruit
-  - Apple
-  - Orange
-  - Banana
-- Dairy
-  - Milk
-  - Cheese
+## Test Design Techniques
 
-## Other Elements — abbr, sub, sup, kbd, mark
+### Boundary Value Analysis
+A test design technique where values on the boundary are selected for testing.
 
-<abbr title="Graphics Interchange Format">GIF</abbr> is a bitmap image format.
+**Example**: For an age field (0-120), test with values like -1, 0, 1, 119, 120, 121.
 
-H<sub>2</sub>O
+### Equivalence Partitioning
+Divides the input domain into partitions that produce the same output. Tests select one or two values from each partition.
 
-X<sup>n</sup> + Y<sup>n</sup> = Z<sup>n</sup>
+**Example**: For an age field (0-120), test values like -5, 50, and 150.
 
-Press <kbd><kbd>CTRL</kbd>+<kbd>ALT</kbd>+<kbd>Delete</kbd></kbd> to end the session.
+### Decision Table Testing
+Uses decision tables to represent different combinations of inputs and corresponding outputs.
 
-Most <mark>salamanders</mark> are nocturnal, and hunt for insects, worms, and other small creatures.
+**Example**:
 
+| Username - Valid | Password - Valid | Action    |
+|-------------------|-------------------|-----------|
+| Yes               | Yes               | Success   |
+| Yes               | No                | Failure   |
+| No                | Yes               | Failure   |
+| No                | No                | Failure   |
+
+### State Transition Testing
+Validates applications that transition states based on events/conditions.
+
+**Example**:
+- Insert ATM card → Enter PIN (Valid: Go to Menu; Invalid: Eject Card)
