--- a/src/content/posts/2.md
+++ b/src/content/posts/2.md
@@ -1,30 +1,113 @@
 ---
-pubDate: 2024-01-02
-author: Charlotte Parker
-title: Where utility-first meets fashion-first
-description: "Unleash your inner fashionista as we explore Tailwind CSS – the runway-ready framework that believes every website deserves to strut its stuff. Glam up your astro.js projects with style!"
+pubDate: 2025-01-07
+author: Samridha
+title: Web Application Testing
+description: "Discover the essentials of web application testing, including frontend, backend, cross-browser compatibility, performance, and security testing techniques."
 image:
-  url: "https://images.unsplash.com/photo-1597300342840-c80ffcbb5356?q=80&w=2787&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-  alt: "#"
-tags: ["Frameworks", "Development"]
+  url: "https://images.unsplash.com/photo-1593642634367-d91a135587b5?q=80&w=2787&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+  alt: "Web Testing Illustration"
+tags: ["Web Testing", "QA", "SDET"]
 ---
 
-Immersive content has rapidly gained traction in recent years thanks to developments in interactivity and animation.
+## Web Application Testing
 
-In interactive animation, a computer application generates animation in real-time based on user inputs like hovering, clicking, scrolling, or other prompts. This type of animation allows viewers to interact and engage with your design on several different levels.
+### Frontend Testing
 
-Remote work has become more prevalent in recent years, allowing employees to work from anywhere in the world. This gives companies access to a larger pool of talent, including those from underrepresented groups who may not be able or willing to relocate.
-From there, I actually decided to study motion graphics. It wasn’t until I worked professionally in the animation field that I really began investing in my illustration skills. Most of what I’ve learned and practiced has actually been on the job!
+#### Verifying UI/UX Elements
+- UI/UX refers to the **User Interface** and **User Experience**.
+- Test the visual and functional aspects of UI elements like buttons, text, dropdown lists, and toggle buttons.
+- Verify behavior, such as:
+  - Button clicks
+  - Hover effects
+  - Tooltips
+  - Animations
+- **Tools**: Applitools (AI-based visual testing tool)
 
-> Most of what I’ve learned and practiced has actually been on the job.
+#### Responsiveness and Cross-Browser Testing
+- Ensure the application adapts and performs on devices with different screen sizes and resolutions.
+- Validate:
+  - Hamburger icon display on small screens
+  - Proper text wrapping
+  - No overlapping elements
+  - Correct element alignment
+  - Touch interactions on mobile devices
+- **Tools**: Browser developer tools, LambdaTest, Sauce Labs
 
-- Hellsite High — A website Tumblr created to help users understand how to use Tumblr. How meta (not Meta).
-- Radically Retro — Indulge in aesthetically pleasing retro goodness. Perfect for the nostalgic designer looking for retro design inspiration.
-- In the crackling dust — Get inspired by this artist’s incredible concept art and lineart.
-- Tokyo Photography — Lukasz Palka, a street and urban photographer, writes Tokyo Photography on his personal blog. His photos of Tokyo are candid, vibrant, and edgy.
+#### Validating CSS, HTML, and JavaScript Functionality
+- Verify that the frontend technologies are implemented correctly and functioning as expected.
 
-From there, I actually decided to study motion graphics. It wasn’t until I worked professionally in the animation field that I really began investing in my illustration skills. Most of what I’ve learned and practiced has actually been on the job!
+---
 
-## Where do you find inspiration?
+### Backend Testing
 
-Well, of course there’s always [Dribbble](https://www.dribbble.com)! But I tend to use basic social media apps to find artists to follow. Instagram and TikTok are home to my main inspirations lately. TikTok has actually been an unexpected surprise for me, as I didn’t realize how effective short-form video content was until recently! It’s really awesome being able to see how my favorite artists work behind the scenes, or even just watch them make goofy memes of their own.
+#### API Testing
+- Use tools like **Postman**, **Swagger**, or **REST Assured** to validate API endpoints.
+
+#### Database Testing
+- Test database queries, constraints, and relationships to ensure data integrity.
+
+#### Server-Side Validation
+- Verify that the backend performs proper validation for all user inputs.
+
+---
+
+### Web-Specific Tests
+
+#### Cross-Browser Compatibility
+- Ensure consistent application behavior across various browsers and versions.
+- **Tools**: LambdaTest, BrowserStack
+- **What to test**:
+  - UI elements
+  - Styling
+  - JavaScript behavior
+  - Third-party integrations (e.g., payment gateways)
+
+#### Cross-Device Compatibility
+- Test on different devices like mobile, tablet, and desktop to ensure proper functionality.
+
+#### Web Performance Testing
+- **Load Times**: Verify the website loads in under 2 seconds.
+  - **Tool**: Google Lighthouse
+- **Latency**: Test network latency and server response time.
+  - **Tools**: CDN tools, LoadRunner
+- **Resource Utilization**:
+  - Measure how efficiently CPU, memory, and bandwidth are utilized during peak usage.
+  - Keep peak resource utilization under 80%.
+  - **Tools**: Chrome DevTools, AWS CloudWatch, Dynatrace
+
+---
+
+### Security Testing
+
+#### SQL Injection
+- **SQL Injection**: Malicious SQL commands are injected into input fields to delete or modify the database.
+  - **Tools**: Burp Suite, SQLMap
+
+#### Cross-Site Scripting (XSS)
+- **XSS (Cross-Site Scripting)** occurs when malicious input is injected into a website and executed on the client side.
+  - **Types**:
+    - Stored: Malicious code is stored on the server (e.g., in comments).
+    - Reflected: Malicious code is reflected from the server (e.g., in query parameters).
+    - DOM-Based: Attack occurs directly in the DOM.
+  - **Tool**: Burp Suite
+  - **Example**: Inject `<script>alert('XSS')</script>`. If an alert pops up, the application is vulnerable.
+
+#### Cross-Site Request Forgery (CSRF)
+- **CSRF**: Unauthorized actions are performed on behalf of an authenticated user.
+  - **Tool**: Burp Suite
+
+---
+
+### Performance Testing
+
+#### Load Testing
+- Simulate a specified number of users to verify application functionality under expected traffic.
+
+#### Stress Testing
+- Simulate traffic beyond the expected load to find the application's breakpoint.
+
+#### Scalability Testing
+- Test the application's ability to scale up or down depending on the load.
+
+#### Endurance Testing
+- Test the application under load for an extended period to check for memory leaks or performance degradation.
