--- a/src/content/posts/4.md
+++ b/src/content/posts/4.md
@@ -1,161 +1,80 @@
 ---
-pubDate: 2024-01-04
-author: Akira Nakamura
-title: Tailwind CSS and astro.js the dynamic duo of web development
-description: "Join forces with the dynamic duo of web development – Tailwind CSS and astro.js. They're like Batman and Robin, but for your coding adventures. No capes required"
+pubDate: 2025-01-07
+author: Samridha
+title: Tools and Technologies in Software Testing
+description: "Explore essential tools and technologies for defect management, version control, CI/CD, performance testing, API testing, and security testing."
 image:
-  url: "https://images.unsplash.com/photo-1586380951230-e6703d9f6833?q=80&w=2787&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-  alt: "#"
-tags: ["Animation", "SVG"]
+  url: "https://images.unsplash.com/photo-1603791440384-56cd371ee9a7?q=80&w=2787&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+  alt: "Software Testing Tools Illustration"
+tags: ["Testing Tools", "CI/CD", "Version Control", "QA"]
 ---
 
-# Defining typography on your Tailwind CSS project
+## Tools and Technologies in Software Testing
 
-_This blog post shows how to add custom typography to your Tailwind CSS project, with example code._
-Tailwind CSS is a popular utility-first CSS framework that offers a wide range of pre-defined classes to make web development faster and more efficient. While Tailwind provides an extensive set of built-in styles, it’s also easy to customize your project with your own fonts and styles. In this blog post, we’ll go through the steps to apply custom fonts and styles on a Tailwind CSS project using the tailwind.config.js file.
+### Defect Management Tools
+- Tools used to log, track, and manage defects.
+- Ensure transparency, accountability, and communication among team members.
 
-## Choose Your Fonts
+#### Key Features:
+- Bug logging.
+- Workflow management (customizable workflows).
+- Advanced search and filter (e.g., Jira Query Language).
+- CI/CD integration (automatically create bugs for failed test automation).
+- Reporting and dashboards.
 
-The first step to applying custom fonts on a Tailwind CSS project is to choose the fonts you want to use. There are many websites where you can download free fonts or use a CDN such as: You can also use paid fonts from websites like:
+#### Types of Tickets:
+- **Story/Epic**
+- **Task**
+- **Bug**
 
-- [Font Share](https://www.fontshare.com/)
-- [Google Fonts](https://fonts.google.com/)
-- [Colletivo](https://www.collletttivo.it/)
-- [Type Cooper](http://coopertype.org/)
-- [The league of movable type](https://www.theleagueofmoveabletype.com/)
-- [Velvetyne](https://velvetyne.fr/)
-  or paid fonts from:
-- [Linotype](https://www.linotype.com)
-- [Atypo](https://www.atipofoundry.com/)
-- [Pangram Pangram](https://pangrampangram.com/)
-- [Typeheist](https://typeheist.co/) Once you have chosen your fonts, you need to add them to your project. You can do this by downloading the font files and placing them in a folder within your project’s directory.
+---
 
-## Define Custom Font Family
+### Version Control
+- Version control systems help developers manage changes to code.
+- Useful in collaborative environments where multiple individuals work together, enabling tracking changes and reverting to previous versions if needed.
 
-After downloading the font files or using the CDN, you need to define a custom font family in the tailwind.config.js file. Open the file and add the following code to the theme section.first-letter: Here is an example of Lexington Themes talwind.config.js file
-```js
-/\*_ @type {import('tailwindcss').Config} _/
-const defaultTheme = require("tailwindcss/defaultTheme");
-module.exports = {
-    theme: {
-        fontFamily: {
-            sans: ["Inter var", ...defaultTheme.fontFamily.sans],
-            mono: ["JetBrains Mono", ...defaultTheme.fontFamily.mono],
-        },
-    },
-};
-In this code, “Inter
-var” and“ JetBrains Mono” is the name of the font family you want to use, “Inter
-var” and“ JetBrains Mono” is the name of the font you downloaded or used the CDN, and `defaultTheme.fontFamily`
-is the fallback font in
-    case the custom font doesn’ t load.
+#### Key Terminologies:
+- **Repository**: The project folder.
+- **Branch**: A separate line of development.
+- **Commit**: A snapshot of changes made to a repository.
+- **Merge**: Combines changes from one branch to another.
+- **Conflict**: Occurs when changes in two branches affect the same line of code.
 
-# # Define Custom Styles
+#### Centralized vs Distributed Version Control Systems:
+- **Centralized (CVCS)**: All versions of the project are stored on a central server. Users check out files, edit, and check them back in.
+- **Distributed (DVCS)**: Each developer has an individual copy of the code. Developers work locally and share changes when needed to merge.
 
-Once you have defined the custom font family, you can define custom styles that use it.You can create a class
-for each style or add them to existing Tailwind CSS classes.For example, you can add custom styles to the h1 class as follows:
-    module.exports = {
-        theme: {
-            fontSize: {
-                xs: [
-                    "0.75rem",
-                    {
-                        lineHeight: "1rem",
-                    },
-                ],
-                sm: [
-                    "0.875rem",
-                    {
-                        lineHeight: "1.5rem",
-                    },
-                ],
-                base: [
-                    "1rem",
-                    {
-                        lineHeight: "1.75rem",
-                    },
-                ],
-                lg: [
-                    "1.125rem",
-                    {
-                        lineHeight: "2rem",
-                    },
-                ],
-                xl: [
-                    "1.25rem",
-                    {
-                        lineHeight: "2rem",
-                    },
-                ],
-                "2xl": [
-                    "1.5rem",
-                    {
-                        lineHeight: "2rem",
-                    },
-                ],
-                "3xl": [
-                    "2rem",
-                    {
-                        lineHeight: "2.5rem",
-                    },
-                ],
-                "4xl": [
-                    "2.5rem",
-                    {
-                        lineHeight: "3.5rem",
-                    },
-                ],
-                "5xl": [
-                    "3rem",
-                    {
-                        lineHeight: "3.5rem",
-                    },
-                ],
-                "6xl": [
-                    "3.75rem",
-                    {
-                        lineHeight: "1",
-                    },
-                ],
-                "7xl": [
-                    "4.5rem",
-                    {
-                        lineHeight: "1.1",
-                    },
-                ],
-                "8xl": [
-                    "6rem",
-                    {
-                        lineHeight: "1",
-                    },
-                ],
-                "9xl": [
-                    "8rem",
-                    {
-                        lineHeight: "1",
-                    },
-                ],
-            },
-            extend: {
-                fontFamily: {
-                    sans: ["Inter var", ...defaultTheme.fontFamily.sans],
-                    mono: ["JetBrains Mono", ...defaultTheme.fontFamily.mono],
-                },
-            },
-        },
-    };
-```
-In this code, we added custom styles to outsite the theme section to be able ot override Tailwind’s classes. We added a custom font weight and line-height.
+---
 
-## Apply Custom Styles
+### CI/CD Tools
+- Tools for continuous integration (CI) and continuous deployment (CD).
+- Automate the process of building, testing, and deploying applications.
 
-To apply your custom styles to your HTML, use the class attribute and the classes you created or extended in the tailwind.config.js file. For example, to apply the custom styles to an h1 element, add the class attribute as follows:
-```html
-<h1 class="font-sans">Hello World</h1>
-<p class="font-mono">Hello World, again</p>
-```
-In this code, you do not need to add the `font-sans` class because is the default class that Tailwind css uses, but you will have to use `font-mono` to define the mono font within your HTMl. But no inside `<pre>` or `<code>` because the font is already mono
+#### Example: Jenkins
+- **Open-Source Automation Tool**: Used for building, testing, and deploying applications.
+- **Key Concepts**:
+  - **Pipeline**: A series of automated steps (written in Groovy).
+  - **Plugins**: Extend functionality (e.g., GitHub, Docker).
+  - **Job**: A task in Jenkins.
 
-## Conclusion
+#### Jenkins Pipeline Workflow:
+1. **Commit**: Developer commits code to GitHub.
+2. **Trigger**: Jenkins detects the commit via webhooks.
+3. **Build**: Jenkins pulls the code and builds it.
+4. **Test**: Jenkins runs the test cases.
+5. **Deploy**: If tests pass, the build is deployed to the specified environment.
 
-In conclusion, customizing fonts and styles in a Tailwind CSS project using the tailwind.config.js file is straightforward. You can choose your fonts, define a custom font family, define custom styles, and apply them to your HTML elements using the classes you created or extended. With these steps, you can create unique and personalized designs that stand out from the rest.
+---
+
+### Performance Testing Tools
+- Tools like **JMeter**, **LoadRunner**, and **k6** are used for load and stress testing to ensure application performance under various conditions.
+
+---
+
+### API Testing Tools
+- Tools like **Postman**, **Newman**, and **REST Assured** are used for testing API endpoints to ensure they function as expected.
+
+---
+
+### Security Testing Tools
+- Tools like **OWASP ZAP** and **Burp Suite**, as well as manual techniques, are used to identify vulnerabilities such as SQL Injection, XSS, and CSRF.
