--- a/src/content/posts/5.md
+++ b/src/content/posts/5.md
@@ -1,28 +1,160 @@
 ---
-pubDate: 2024-01-05
-author: Isabella Garcia
-title: Because writing vanilla JS is so last season
-description: "Tired of vanilla JS? Spice up your coding life with astro.js. It's the haute couture of JavaScript frameworks. Tailwind CSS adds the perfect accessory for that runway-ready look."
+pubDate: 2025-01-07
+author: Samridha
+title: Programming Knowledge
+description: "Essential programming knowledge for test engineers, including scripting languages like Python and JavaScript, DOM manipulation for frontend validation, and SQL/NoSQL database basics for backend testing."
 image:
   url: "https://images.unsplash.com/photo-1585190775852-3e6bb2b80184?q=80&w=2788&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-  alt: "#"
-tags: ["CDN", "ARIA"]
+  alt: "Programming Knowledge Illustration"
+tags: ["Programming", "QA", "Test Automation"]
 ---
 
-This theme comes with the [@astrojs/mdx](https://docs.astro.build/en/guides/integrations-guide/mdx/) integration installed and configured in your `astro.config.mjs` config file. If you prefer not to use MDX, you can disable support by removing the integration from your config file.
+## Programming Knowledge
 
-## Why MDX?
+### Scripting Languages
+- **Python and JavaScript** are widely used for test automation.
 
-MDX is a special flavor of Markdown that supports embedded JavaScript & JSX syntax. This unlocks the ability to [mix JavaScript and UI Components into your Markdown content](https://docs.astro.build/en/guides/markdown-content/#mdx-features) for things like interactive charts or alerts.
-If you have existing content authored in MDX, this integration will hopefully make migrating to Astro a breeze.
+### Python 
 
-## Example
+#### Key Features:
+- Data types: `int`, `float`, `complex`, `str`, `bool`, `list`, `tuple`, `dict`, `set`.
+- Variable-length arguments and classes for object-oriented programming.
+- File handling and exception handling for robust scripting.
 
-Here is how you import and use a UI component inside of MDX.
-When you open this page in the browser, you should see the clickable button below.
+  ##### Classes for OOP
+    ```
+    def add_numbers(*args):
+      return sum(args)
 
-## More Links
+  print(add_numbers(1, 2, 3, 4))  # Output: 10
 
-- [MDX Syntax Documentation](https://mdxjs.com/docs/what-is-mdx)
-- [Astro Usage Documentation](https://docs.astro.build/en/guides/markdown-content/#markdown-and-mdx-pages)
-- **Note:** [Client Directives](https://docs.astro.build/en/reference/directives-reference/#client-directives) are still required to create interactive components. Otherwise, all components in your MDX will render as static HTML (no JavaScript) by default.
+  class person:
+    def __init__(self, age):
+      self.age = age
+    ```
+  ##### File Handling
+  ```
+  with open("file_name.txt", r) as file:
+	  file.readlines()
+  ```
+
+  ##### Exception Handling
+  ```
+  try:
+	  element = driver.find_element(By.ID, "summit")
+  catch Expection as e:
+	  print("error :"{e})
+  ```
+  ##### Selenium
+  ```
+  from selenium import webdriver
+
+  driver = webdriver.chrome()
+  element = driver.find_element(By.ID, "1234)
+  ```
+- Libraries like:
+  - **Pandas** for data manipulation.
+  - **Requests** for API interactions.
+
+#### Understanding Frameworks:
+- **PyTest vs Unittest**:
+  - **Unittest**: A class-based testing framework in Python.
+    ```
+    import unittest
+
+    class test_login(unittest.TestCase):
+      def setUp(self,):
+        pass
+      def test_login(self, username, password):
+        self.assertEqual()
+        pass
+      def tearDown(self):
+        pass
+    ```
+  - **PyTest**: A simpler, function-based framework.
+
+| **Aspect**          | **PyTest**                  | **Unittest**            |
+|----------------------|-----------------------------|--------------------------|
+| Ease of Use          | Simple function-based      | Uses complex structures |
+| Setup/Teardown       | Fixtures (`pytest.fixture`) | `setUp()` and `tearDown()` |
+| Assertion            | No special methods         | Special methods like `assertEqual()` |
+| Plugin Support       | Extensive plugin support   | Limited plugin support   |
+| Speed                | Faster                     | Comparatively slower     |
+| Test Detection       | Automatically detects tests | Detects tests in `test*.py` files |
+
+---
+
+### Web Fundamentals
+- **HTML, CSS, and JavaScript** for validating frontend issues.
+
+#### Basic DOM Manipulation and Debugging:
+- **DOM (Document Object Model)**: Represents the content of HTML/XML documents as a hierarchical tree structure.
+- Allows developers to dynamically access, modify, and interact with the content of a webpage.
+
+#### Key DOM Manipulation Tasks:
+1. Change content dynamically (e.g., updating titles).
+2. Get and set attributes of elements.
+3. Add or remove classes of elements (e.g., `active`, `deactivate`, `toggle`).
+4. Create and append elements to the DOM.
+5. Remove elements from the DOM.
+
+##### JavaScript Code
+```
+  document.getElementById("title").textContent = "Updated Title!";
+  const title = document.getElementById("title");
+  const buttons = document.getElementsByClassName("btn");
+  const firstLink = document.querySelector("a");
+  const allLinks = document.querySelectorAll("a");
+```
+#### DOM Manipulation Tools:
+- Inspect elements.
+- console
+- Beakpoints.
+- Event listeners.
+
+---
+
+### Database Basics
+- Both **SQL** and **NoSQL** databases are commonly used to store and manage data. They differ in structure and usage.
+
+#### SQL Databases:
+- Relational databases where data is stored in tables with a fixed schema.
+- Key SQL Commands:
+  - `CREATE TABLE`, `INSERT INTO`, `SELECT`, `UPDATE`, and `DELETE`.
+  ```
+    # Create table
+    CREATE TABLE table_name(
+    id INT PRIMARY KEY,
+    name VARCHAR(50),
+    password VARCHAR(50)
+    );
+
+    # Insert into table
+    INSERT INTO table_name (id, name, password)
+    VALUES (1, "sam", "ridha");
+
+    # retrive
+      SELECT * FROM table_name WHERE id=1;
+      
+    # Update a row
+    UPDATE table_name
+    SET name = "SAMRIDHA"
+    WHERE id = 1;
+
+    # delete a row
+    DELETE FROM table_name
+    WHERE id=1
+  ```
+
+#### NoSQL Databases:
+- Non-relational databases designed for flexibility and scalability.
+- Example: **MongoDB**, **DynamoDB**.
+- Features:
+  - No fixed schema; data is stored as key-value pairs or in JSON-like documents.
+  - Ideal for unstructured data or large-scale applications.
+```
+db.users.insertone({id: 1, name: "sam", password:"ridha"});
+db.users.find({id:1});
+db.users.updateOne({id: 1},
+$set : {name: "samridha"});
+```
