--- a/src/content/posts/8.md
+++ b/src/content/posts/8.md
@@ -1,13 +1,77 @@
 ---
 pubDate: 2025-01-07
 author: Samridha
-title: Agile Methodologies
+title: SDLC for Testing
 description: "An overview of Agile methodologies, including Scrum and Kanban frameworks, writing and testing user stories, sprint planning, retrospectives, and daily stand-ups."
 image:
   url: "https://images.unsplash.com/photo-1523731407965-2430cd12f5e4?q=80&w=2787&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
   alt: "Agile Methodologies Illustration"
 tags: ["Agile", "Scrum", "Kanban", "Testing"]
 ---
+
+## Software Development Life Cycle (SDLC)
+
+SDLC defines the process of planning, designing, developing, testing, and deploying software.
+
+### Stages of SDLC
+
+1. **Requirement Analysis**  
+   - Understand user requirements, both functional and non-functional.  
+   - Create the **Requirement Specification Report (RSR)** document.
+
+2. **Planning**  
+   - Analyze requirements and decide the scope, timeline, cost, and resource estimation.  
+   - Choose the appropriate SDLC model (**Waterfall, Agile, Spiral, V-Model**).
+
+3. **Designing**  
+   - **High-Level Design (HLD)**: Define system architecture, database structure, and UI/UX design.  
+   - **Low-Level Design (LLD)**: Define classes, methods, and internal logic.
+
+4. **Development**  
+   - Develop software features using the selected programming language.  
+   - Write **unit test cases** for individual components.
+
+5. **Testing**  
+   - Ensure the developed software satisfies functional and non-functional requirements.
+
+6. **Deployment**  
+   - Deploy the software into **staging/production environments**.
+
+7. **Maintenance and Support**  
+   - Release updates and patches.  
+   - Fix any **bugs** if they arise.
+
+---
+
+## Models of SDLC
+
+Choosing an SDLC model depends on factors like project complexity, size, available resources, client requirements, and risks.
+
+1. **Waterfall Model**  
+   - A sequential model where each stage follows the previous one.  
+   - Best for small projects with well-defined requirements.
+
+2. **V-Model**  
+   - Similar to the Waterfall model but includes a testing phase for each development phase.  
+   - Best for high-risk projects.
+
+3. **Incremental Model**  
+   - Software is built and delivered in increments.  
+   - Best for medium and large projects requiring phased delivery.
+
+4. **Agile Model**  
+   - An iterative and incremental approach with continuous feedback.  
+   - Best for medium and large projects with changing requirements.  
+   - Requires planning and active customer involvement.
+
+5. **Spiral Model**  
+   - An iterative model with a focus on risk analysis.  
+   - Stages: **Planning → Risk Analysis → Engineering → Evaluation** (repeated in spirals).  
+   - Used for complex workflows.
+
+6. **RAD Model (Rapid Application Development)**  
+   - Minimal planning.  
+   - Each functionality is divided and developed as parallel prototypes, which are later integrated.
 
 ## Agile Methodologies
 
